@@ -353,3 +353,14 @@ for (i in seq(along.with=xxh3_128Input)) {
 
 xxh3_128 <- getVDigest(algo = 'xxh3_128')
 expect_identical(xxh3_128(xxh3_128Input, serialize = FALSE), xxh3_128Output)
+
+## Verify that is.character(file) && missing(object) is tested
+expect_true(is.character(digest(file = "test_digest.R")))
+
+## Verify that a streaming algorithm with serialize is an error
+expect_error(digest(object = "A", algo = "spookyhash", serialize = FALSE),
+             pattern = "algorithm is not available without serialization")
+
+## Verify that a non-character, non-raw object with a non-streaming algorithm is an error
+expect_error(digest(object = 1, serialize = FALSE),
+             pattern = "Argument object must be of type character or raw vector if serialize is FALSE")
