@@ -1,3 +1,8 @@
+2025-01-01  Bill Denney  <wdenney@humanpredictions.com>
+
+	* R/digest.R: Increase testing removing "nocov" lines
+	* inst/tinytest/test_digest.R: Additional digest() tests
+
 2024-12-31  Bill Denney  <wdenney@humanpredictions.com>
 
 	* DESCRiPTION (Description): Correct typos
